# nodi

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: main.yml
examples/: play_midi.rs
src/: app.rs  compose.rs  doc_lib.md  doc_player.md  doc_sheet.md  doc_timers.md  event.rs  in_flames.mid  lib.rs  main.rs  player.rs  sheet.rs  timer.rs  timers.rs
src/event/: transpose.rs
src/player/: control.rs
src/sheet/: bar.rs  impls.rs
