[package]
name = "nodi"
description = "A library for playback and abstraction of MIDI files."
version = "0.15.2"
edition = "2018"
license = "MIT"
authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
categories = [ "multimedia::audio", "multimedia::encoding" ]
keywords = [ "midi", "audio", "music", "smf" ]
repository = "https://github.com/insomnimus/nodi"
readme = "readme.md"

[package.metadata.docs.rs]
features = [ "midir", "verbose-tracing", "hybrid-sleep"]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[[example]]
name = "play_midi"
required-features = [ "midir" ]

[dependencies]
log = "0.4.17"
midir = { version = "0.8.0", optional = true }
midly = "0.5.2"

[dev-dependencies]
clap = "3.1.18"
midir = "0.8.0"

[features]
default = [ "hybrid-sleep" ]
verbose-tracing = []
hybrid-sleep = []
jack = ["midir/jack"]
winrt = ["midir/winrt"]
