[package]
name = "nodi"
description = "A library for playback and abstraction of MIDI files."
version = "0.19.2"
edition = "2021"
license = "MIT"
authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
categories = [ "multimedia::audio", "multimedia::encoding" ]
keywords = [ "midi", "audio", "music", "smf" ]
repository = "https://github.com/insomnimus/nodi"
readme = "readme.md"

[package.metadata.docs.rs]
features = [ "midir", "hybrid-sleep"]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[[example]]
name = "play_midi"
required-features = [ "midir" ]

[dependencies]
midir = { version = "0.8.0", optional = true }
midly = "0.5.2"

[dev-dependencies]
clap = "=3.1.18"
midir = "0.8.0"

[features]
default = [ "hybrid-sleep" ]
hybrid-sleep = []
midir-jack = ["midir/jack"]
midir-winrt = ["midir/winrt"]
